ligo + actualizar api
